# announcement

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_results.ods  minisat_all  paper.tex
belief_revise/src/: belief.cpp  belief.h
src/: announce.cpp  announce.h  announce.tests.cpp  file.cpp  file.h  interactive.cpp  interactive.h  main.cpp  tools.cpp  tools.h  utils.cpp  utils.h
src/UI/: add_entry_dialog.cpp  add_entry_dialog.h  add_entry_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/stopwatch/: stopwatch.cpp  stopwatch.hpp
